# hpffp-exercises

./: README.md
02_hello_haskell/: 02_hello_haskell.cabal
02_hello_haskell/exercises/: FunWithFunctions.hs  Test.hs
03_strings/: 03_strings.cabal
03_strings/examples/: BuildingFunctions.hs  Test.hs
04_basic_datatypes/: 04_basic_datatypes.cabal
04_basic_datatypes/examples/: Test.hs
05_types/: 05_types.cabal
05_types/examples/: Sing.hs  Test.hs
05_types/examples/Arith/: Main.hs
06_type_classes/: 06_type_classes.cabal
06_type_classes/examples/: EqInstances.hs  Test.hs
07_more_functional_patterns/: 07_more_functional_patterns.cabal
07_more_functional_patterns/examples/: Arith4.hs  Test.hs
08_recursion/: 08_recursion.cabal
08_recursion/examples/: Test.hs  WordNumber.hs
09_lists/: 09_lists.cabal
09_lists/examples/: Cipher.hs  PoemLines.hs  Test.hs
10_folding_lists/: 10_folding_lists.cabal
10_folding_lists/examples/: Database.hs  Test.hs
11_algebraic_datatypes/: 11_algebraic_datatype.cabal
11_algebraic_datatypes/examples/: BinaryTree.hs  HuttonsRazor.hs  Phone.hs  Programmers.hs  Test.hs  TooMany.hs  Vehicles.hs
