cabal-version:      3.0
name:               05types
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable arith
  import:           warnings
  main-is:          Main.hs
  ghc-options: -Wall -Wno-type-defaults
  build-depends:
    base ^>=4.17.2.1
  hs-source-dirs:   examples/Arith
  default-language: GHC2021

test-suite test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules: Sing
  hs-source-dirs: examples
  ghc-options: -Wall -Wno-type-defaults -Wno-incomplete-patterns -Wno-unused-matches
  build-depends:
      base >=4.7 && <5
    , tasty
    , tasty-hunit
  default-language: GHC2021
